# cogent

./: .gitattributes  .gitignore  Cargo.toml  README.md  test_report.txt
.github/workflows/: rust.yml
benches/: benches.rs
data/: combined_dataset
data/MNIST/: source
src/: activation.rs  activations.rs  cost.rs  costs.rs  layer.rs  lib.rs  neural_network.rs  setter_enums.rs  trainer.rs  utils.rs
tests/: tests.rs
