[package]
name = "rust_neural_network"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Comment is what I'm using it for.
[dependencies]
rand = "0.7"                    # Random number generation
scoped_threadpool = "0.1.*"     # Threading
itertools = "0.8.2"             # Zipping iterators nicely
ndarray = "0.12.0"              # Linear algebra
ndarray_einsum_beta = "0.4.4"   # Einstein summation for batch backpropagation
ndarray-rand = "0.10.0"         # Random Array generation
crossterm="0.14.2"              # Nice printing