[package]
name = "cogent"
version = "0.1.13"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"
description = "Basic neural network library for classification"
license = "Apache-2.0"
exclude = ["tests","data"]
repository = "https://github.com/JonathanWoollett-Light/cogent"
documentation = "https://docs.rs/cogent/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Comment is what I'm using it for.
[dependencies]
rand = "0.7"                                        # Random number generation
scoped_threadpool = "0.1.*"                         # Threading
itertools = "0.8.2"                                 # Zipping iterators nicely
ndarray = {version="0.13.0",features=["serde"]}     # Linear algebra
ndarray_einsum_beta = "0.5.0"                       # Einstein summation for batch backpropagation
ndarray-rand = "0.11.0"                             # Random Array generation
crossterm="0.14.2"                                  # Nice printing
serde = {version = "1.0.104",features=["derive"]}   # Serialize (Export) and deserialize (Import) neural network
serde_json = "1.0"                                  # JSON format for serde