[package]
name = "cogent"
version = "0.5.9"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2018"
description = "Basic neural network library for classification."
license = "Apache-2.0"
exclude = ["tests","data"]

repository = "https://github.com/JonathanWoollett-Light/cogent"
documentation = "https://docs.rs/cogent/"
readme = "README.md"

keywords = ["deep-learning","neural-networks","machine-learning"]
catagories= ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Library ... # Purpose
[dependencies]
rand = "0.7.3"                                      # Random number generation
crossterm="0.18.0"                                  # Printing backpropagation progress
serde = {version = "1.0.106",features=["derive"]}   # Serialize (Export) and deserialize (Import) `NeuralNetwork`
serde_json = "1.0.50"                               # JSON format for serde
arrayfire = "3.7.0"                                 # Linear algebra and GPU compute
itertools = "0.9.0"                                 # Nice zipping of iterators
ndarray = "0.13.1"                                  # User interfacing
bytemuck = "1.4.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]